[gd_scene load_steps=11 format=3 uid="uid://djmmqkgcmvnw0"]

[ext_resource type="PackedScene" uid="uid://dqf03ab8xtwhv" path="res://data/weapons/weapon.tscn" id="1"]
[ext_resource type="Script" path="res://data/weapons/pulse_shard/pulse_shard.gd" id="2"]
[ext_resource type="AudioStream" uid="uid://c1a014cc2eaum" path="res://data/weapons/pulse_shard/fire_sfx_01.mp3" id="4_ra2c0"]
[ext_resource type="Material" path="res://data/weapons/pulse_shard/pulse_shard.material" id="5"]

[sub_resource type="BoxMesh" id="BoxMesh_3wr86"]
material = ExtResource("5")
size = Vector3(0.064, 0.8, 0.064)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_3e043"]
resource_local_to_scene = true
transparency = 1
emission_enabled = true
emission = Color(0.572549, 0.827451, 0.92549, 1)
emission_energy_multiplier = 15.0
disable_receive_shadows = true

[sub_resource type="BoxMesh" id="BoxMesh_va6l4"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_3e043")
size = Vector3(0.064, 0.8, 0.064)

[sub_resource type="Animation" id="Animation_xtx4o"]
length = 0.001
tracks/0/type = "bezier"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("geometry_hook/muzzle_flash:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector3(0, -0.445, 0)]
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("geometry_hook/muzzle_flash_light:light_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(10, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0)
}

[sub_resource type="Animation" id="Animation_01pao"]
resource_name = "muzzle_flash"
loop_mode = 1
step = 0.01
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("geometry_hook/muzzle_flash:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(0.183011, 2.92818),
"update": 0,
"values": [Vector3(3, 1, 3), Vector3(4, 1, 6.5)]
}
tracks/1/type = "bezier"
tracks/1/imported = false
tracks/1/enabled = false
tracks/1/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.01)
}
tracks/2/type = "bezier"
tracks/2/imported = false
tracks/2/enabled = false
tracks/2/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:g")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.01)
}
tracks/3/type = "bezier"
tracks/3/imported = false
tracks/3/enabled = false
tracks/3/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:b")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"handle_modes": PackedInt32Array(0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0.01)
}
tracks/4/type = "bezier"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("geometry_hook/muzzle_flash:mesh:material:albedo_color:a")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"handle_modes": PackedInt32Array(0, 0),
"points": PackedFloat32Array(1, -0.25, 0, 0.25, 0, 0, -0.8, 0, 0.25, 0),
"times": PackedFloat32Array(0.01, 0.71)
}
tracks/5/type = "bezier"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("geometry_hook/muzzle_flash_light:light_energy")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"handle_modes": PackedInt32Array(0, 0, 0),
"points": PackedFloat32Array(10, -0.25, 0, 0.25, 0, 1.93, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0),
"times": PackedFloat32Array(0, 0.36, 1)
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("geometry_hook/muzzle_flash:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0.01, 1),
"transitions": PackedFloat32Array(0.392292, 0.203063),
"update": 0,
"values": [Vector3(0, -0.445, 0), Vector3(0, -0.445, 0.181)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b8pwd"]
_data = {
"RESET": SubResource("Animation_xtx4o"),
"muzzle_flash": SubResource("Animation_01pao")
}

[node name="pulse_shard" instance=ExtResource("1")]
script = ExtResource("2")
colour = Color(0.14, 0.68, 0.95, 1)
is_enemy_weapon = false
base_magazine_size = 200
casing_eject_force = 0.3
base_fire_rate = 0.08
fire_kickback = 65.0
eject_casings = true
weapon_name = "Pulse Shard"

[node name="shell_casing_spawner" type="Node3D" parent="." index="0"]
transform = Transform3D(0.955386, 0.294901, -0.0164577, -0.294941, 0.955515, -1.28923e-08, 0.0157255, 0.00485405, 0.999865, -0.622347, -0.240286, -0.453922)

[node name="Marker3D" type="Marker3D" parent="shell_casing_spawner" index="0"]
gizmo_extents = 1.0

[node name="bullet_spawner" type="Node3D" parent="." index="1"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.444842, 0.0947556)

[node name="geometry_hook" type="Node3D" parent="." index="2"]

[node name="geometry" type="MeshInstance3D" parent="geometry_hook" index="0"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.444842, 0.046)
cast_shadow = 0
mesh = SubResource("BoxMesh_3wr86")

[node name="muzzle_flash" type="MeshInstance3D" parent="geometry_hook" index="1"]
transform = Transform3D(3.96211, 0, 0, 0, 1, 0, 0, 0, 6.36739, 0, -0.445, 0)
cast_shadow = 0
mesh = SubResource("BoxMesh_va6l4")

[node name="muzzle_flash_light" type="OmniLight3D" parent="geometry_hook" index="2"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.356412, 0.222734)
light_color = Color(0.611765, 0.87451, 0.976471, 1)
light_energy = 10.0
light_indirect_energy = 0.0
light_volumetric_fog_energy = 8.5
light_size = 0.5
shadow_enabled = true
shadow_reverse_cull_face = true
distance_fade_enabled = true
omni_attenuation = 2.2

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="3"]
playback_speed = 6.5
libraries = {
"": SubResource("AnimationLibrary_b8pwd")
}

[node name="AudioStreamPlayer3D" type="AudioStreamPlayer3D" parent="." index="4"]
stream = ExtResource("4_ra2c0")
volume_db = 15.943
max_polyphony = 20
bus = &"bullets"
